fix of one mat icon a little bit too big

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -249,6 +249,7 @@ mat-hint {
 
     .mat-icon{
         line-height: 20px;
+        font-size: $small_text;
     }
 }
 
